[tool.poetry]
name = "chat"
version = "0.1.0"
description = "Chatbot for mathem based on mathems FAQ"
authors = ["relmgren <elmgren93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.3"
faiss-cpu = "^1.7.4"
jq = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
